data/derived/comb/progs/unify/prog1132.ml.out
Characters 67-73:
  wwhile(let helper x = (f x, f x != (f b)) in helper), b;;
                                               ^^^^^^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type ('c -> 'c * bool) * 'c
